fix review issues

--- a/HW_2/Task1.html
+++ b/HW_2/Task1.html
@@ -79,27 +79,40 @@
 
             <textarea id="aboutYourselfArea" name="aboutYourselfArea" rows="4" cols="50"></textarea><br>
 
-            <label for="genderM">Gender</label><br>
-            <input type="radio" id="genderM" name="gender" value="male">Male<br>
-            <input type="radio" id="genderF" name="gender" value="female">Female<br>
-            <input type="radio" id="genderU" name="gender" value="undecided">Undecided<br>
+            <p>Gender</p>
+            <label for="genderM">Male</label><br>
+            <input type="radio" id="genderM" name="gender" value="male"><br>
+            <label for="genderF">Female</label><br>
+            <input type="radio" id="genderF" name="gender" value="female"><br>
+            <label for="genderU">Undecided</label><br>
+            <input type="radio" id="genderU" name="gender" value="undecided"><br>
 
             <label for="favoriteColor">Favorite color</label><br>
             <input type="color" id="favoriteColor" name="favoriteColor"><br>
 
-            <label for="workFT">Activity</label><br>
-            <input type="radio" id="workFT" name="work" value="fullWork">Full time work<br>
-            <input type="radio" id="workPT" name="work" value="partWork">Part time work<br>
-            <input type="radio" id="workFreelance" name="work" value="freelance">Freelance<br>
-            <input type="radio" id="workFree" name="work" value="free">Totally free as a white person<br>
-            <input type="radio" id="workStud" name="work" value="stud">Student<br>
+            <p>Activity</p>
+            <label for="workFT">Full time work</label><br>
+            <input type="radio" id="workFT" name="work" value="fullWork"><br>
+            <label for="workPT">Part time work</label><br>
+            <input type="radio" id="workPT" name="work" value="partWork"><br>
+            <label for="workFreelance">Freelance</label><br>
+            <input type="radio" id="workFreelance" name="work" value="freelance"><br>
+            <label for="workFree">Totally free as a white person</label><br>
+            <input type="radio" id="workFree" name="work" value="free"><br>
+            <label for="workStud">Student</label><br>
+            <input type="radio" id="workStud" name="work" value="stud"><br>
 
-            <label for="animalD">Pet</label><br>
-            <input type="checkbox" id="animalD" name="animal" value="dog">Dog<br>
-            <input type="checkbox" id="animalC" name="animal" value="cat">Cat<br>
-            <input type="checkbox" id="animalB" name="animal" value="bird">Bird<br>
-            <input type="checkbox" id="animalF" name="animal" value="fish">Fish<br>
-            <input type="checkbox" id="animalA" name="animal" value="another">Another one<br>
+            <p>Pet</p>
+            <label for="animalD">Dog</label><br>
+            <input type="checkbox" id="animalD" name="animal" value="dog"><br>
+            <label for="animalC">Cat</label><br>
+            <input type="checkbox" id="animalC" name="animal" value="cat"><br>
+            <label for="animalB">Bird</label><br>
+            <input type="checkbox" id="animalB" name="animal" value="bird"><br>
+            <label for="animalF">Fish</label><br>
+            <input type="checkbox" id="animalF" name="animal" value="fish"><br>
+            <label for="animalA">Another one</label><br>
+            <input type="checkbox" id="animalA" name="animal" value="another"><br>
 
             <label for="newFile">Add file</label><br>
             <input type="file" id="newFile" name="newFile"><br>
