--- a/HW_5/indexVer1.html
+++ b/HW_5/indexVer1.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&di">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="/logo">
+            <img src="/logo" alt="logo">
+            <p><strong>Trafalgar</strong></p>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Find a doctor</a>
+                </li>
+                <li>
+                    <a href="#">Apps</a>
+                </li>
+                <li>
+                    <a href="#">Testimonials</a>
+                </li>
+                <li>
+                    <a href="#">About us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>
+                Virtual healthcare for you
+            </h1>
+            <p>
+                Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for
+                everyone
+            </p>
+            <img src="path" alt="first healthcare image">
+            <a href="/consultToday">Consult today</a>
+        </section>
+        <section>
+            <h2>
+                Our services
+            </h2>
+            <p>
+                We provide to you the best choiches for you. Adjust it to your health needs and make sure your
+                undergo
+                treatment with our highly qualified doctors you can consult with us which type of service is
+                suitable
+                for your health
+            </p>
+            <ul>
+                <li>
+                    <a href="/searchDoctor">
+                        <img src="path" alt="searchDoctor image">
+                        <h3>Search doctor</h3>
+                        <p>
+                            Choose your doctor from thousands of specialist, general, and trusted hospitals
+                        </p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/onlinePharmacy">
+                        <img src="path" alt="onlinePharmacy image">
+                        <h3>Online pharmacy</h3>
+                        <p>
+                            Buy your medicines with our mobile application with a simple delivery system
+                        </p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/consultation">
+                        <img src="path" alt="consultation image">
+                        <h3>Consultation</h3>
+                        <p>
+                            Free consultation with our trusted doctors and get the best recomendations
+                        </p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/detailsInfo">
+                        <img src="path" alt="detailsInfo image">
+                        <h3>Details info</h3>
+                        <p>
+                            Free consultation with our trusted doctors and get the best recomendations
+                        </p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/tracking">
+                        <img src="path" alt="tracking image">
+                        <h3>Tracking</h3>
+                        <p>
+                            You can get 24/7 urgent care for yourself or your children and your lovely family
+                        </p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/searchDoctor">
+                        <img src="path" alt="searchDoctor image">
+                        <h3>Search doctor</h3>
+                        <p>
+                            Choose your doctor from thousands of specialist, general, and trusted hospitals
+                        </p>
+                    </a>
+                </li>
+            </ul>
+            <a href="/learnMore">Learn more</a>
+        </section>
+    </main>
 </body>
+
 </html>
