--- a/HW_6/indexVer1.html
+++ b/HW_6/indexVer1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&di">
+    <link rel="stylesheet" href="stylesVer1.css">
     <title>Document</title>
 </head>
 
@@ -36,17 +37,6 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>
-                Virtual healthcare for you
-            </h1>
-            <p>
-                Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for
-                everyone
-            </p>
-            <img src="path" alt="first healthcare image">
-            <a href="/consultToday">Consult today</a>
-        </section>
         <section>
             <h2>
                 Our services
