--- a/HW_6/indexVer1.html
+++ b/HW_6/indexVer1.html
@@ -12,12 +12,12 @@
 
 <body>
     <header>
-        <a href="/logo">
-            <img src="/logo" alt="logo">
-            <p><strong>Trafalgar</strong></p>
+        <a сlass="logo" href="/logo">
+            <img class="logo-image" src="/logo" alt="logo">
+            <p class="trafalgar-logo">Trafalgar</p>
         </a>
         <nav>
-            <ul>
+            <ul class="nav-bar-list">
                 <li>
                     <a href="#">Home</a>
                 </li>
@@ -38,10 +38,10 @@
     </header>
     <main>
         <section>
-            <h2>
+            <h2 class="section-head">
                 Our services
             </h2>
-            <p>
+            <p class="section-paragraph">
                 We provide to you the best choiches for you. Adjust it to your health needs and make sure your
                 undergo
                 treatment with our highly qualified doctors you can consult with us which type of service is
@@ -52,8 +52,8 @@
                 <li>
                     <a href="/searchDoctor">
                         <img src="path" alt="searchDoctor image">
-                        <h3>Search doctor</h3>
-                        <p>
+                        <h3 class="list-header">Search doctor</h3>
+                        <p class="list-paragraph">
                             Choose your doctor from thousands of specialist, general, and trusted hospitals
                         </p>
                     </a>
@@ -61,8 +61,8 @@
                 <li>
                     <a href="/onlinePharmacy">
                         <img src="path" alt="onlinePharmacy image">
-                        <h3>Online pharmacy</h3>
-                        <p>
+                        <h3 class="list-header">Online pharmacy</h3>
+                        <p class="list-paragraph">
                             Buy your medicines with our mobile application with a simple delivery system
                         </p>
                     </a>
@@ -70,8 +70,8 @@
                 <li>
                     <a href="/consultation">
                         <img src="path" alt="consultation image">
-                        <h3>Consultation</h3>
-                        <p>
+                        <h3 class="list-header">Consultation</h3>
+                        <p class="list-paragraph">
                             Free consultation with our trusted doctors and get the best recomendations
                         </p>
                     </a>
@@ -79,8 +79,8 @@
                 <li>
                     <a href="/detailsInfo">
                         <img src="path" alt="detailsInfo image">
-                        <h3>Details info</h3>
-                        <p>
+                        <h3 class="list-header">Details info</h3>
+                        <p class="list-paragraph">
                             Free consultation with our trusted doctors and get the best recomendations
                         </p>
                     </a>
@@ -88,8 +88,8 @@
                 <li>
                     <a href="/tracking">
                         <img src="path" alt="tracking image">
-                        <h3>Tracking</h3>
-                        <p>
+                        <h3 class="list-header">Tracking</h3>
+                        <p class="list-paragraph">
                             You can get 24/7 urgent care for yourself or your children and your lovely family
                         </p>
                     </a>
@@ -97,8 +97,8 @@
                 <li>
                     <a href="/searchDoctor">
                         <img src="path" alt="searchDoctor image">
-                        <h3>Search doctor</h3>
-                        <p>
+                        <h3 class="list-header">Search doctor</h3>
+                        <p class="list-paragraph">
                             Choose your doctor from thousands of specialist, general, and trusted hospitals
                         </p>
                     </a>
