--- a/HW_8/index.html
+++ b/HW_8/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&di">
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Html and basic css styles</title>
 </head>
@@ -142,8 +140,8 @@
                     </div>
                 </li>
             </ul>
-            <div class="button">
-                <a class="learn-more-button" href="#">Learn more</a>
+            <div class="learn-more-button">
+                <a class="blue-color" href="#">Learn more</a>
             </div>
         </section>
         <!-- Third section -->
@@ -158,7 +156,9 @@
                     everyone.
                     To us, it’s not just work. We take pride in the solutions we deliver
                 </p>
-                <a class="learn-more-button" href="/learnMore">Learn more</a>
+                <div class="learn-more-button button-left-align">
+                    <a class="blue-color" href="/learnMore">Learn more</a>    
+                </div>
             </div>
         </section>
         <!-- Fourth section -->
@@ -169,7 +169,9 @@
                     “Our dedicated patient engagement app and<br> web portal allow you to access information<br>
                     instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely”
                 </p>
-                <a class="learn-more-button" href="/download">Download</a>
+                <div class="learn-more-button button-left-align">
+                    <a class="blue-color" href="/download">Download</a>    
+                </div>
             </div>
             <img src="imgs/img4Section.png" alt="third healthcare image">
         </section>
@@ -284,13 +286,18 @@
                     </div>
                 </li>
             </ul>
-            <a class="learn-more-button" href="/viewAll">View all</a>
+            <div class="learn-more-button">
+                <a class="blue-color" href="/viewAll">View all</a>
+            </div>
         </section>
     </main>
     <footer>
         <div class="footer-container containerOne">
             <div>
                 <section class="left-content">
+                    <h2 hidden>
+                        Header to fix validator
+                    </h2>
                     <a class="logo" href="#">
                         <img src="imgs/logo-white.svg" alt="logo">
                         <span class="logo-white">Trafalgar</span>
