stiled two more section

--- a/HW_10/index.html
+++ b/HW_10/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main>
-        <section class="find-gift-section container">
+        <section class="find-gift-section background-container left-right-space-container">
             <div class="find-gift-content">
                 <h1>Find a gift for your wife or girlfriend</h1>
                 <p class="regular-paragraph">
@@ -48,7 +48,7 @@
             </div>
             <img class="card-size-container" src="imgs/couple.png" alt="couple1">
         </section>
-        <section class="how-we-work-section container">
+        <section class="how-we-work-section background-container left-right-space-container">
             <img class="card-size-container" src="imgs/thanks.png" alt="thanksCard">
             <di class="how-we-work-content">
                 <h2>How we work</h2>
@@ -61,64 +61,66 @@
                 <a class="regular-button orange-border-button" href="#">Learn More</a>
             </div>
         </section>
-        <section>
-            <div>
-                <h2>Gifts for all Occasions</h2>
-                <p>
-                    “Try our web app to find the
-                    best gifts for all occasions”
+        <section class="gifts-all-occasions background-container">
+            <div class="container">
+                <h2 class="center-text-container gifts-all-occasions-header ">Gifts for all Occasions</h2>
+                <p class="center-text-container gifts-all-occasions-paragraph">
+                    Try our web app to find the
+                    best gifts for all occasions
                 </p>
                 <ul>
                     <li>
                         <figure>
                             <img src="imgs/birthday.png" alt="birthday">
-                            <figcaption>
-                                <h4>Birthday</h4>
-                                <a href="#">See More</a>
+                            <figcaption class="card-content">
+                                <h4 class="card-header">Birthday</h4>
+                                <a class="card-link" href="#">See More</a>
                             </figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
                             <img src="imgs/anniversary.png" alt="anniversary">
-                            <figcaption>
-                                <h4>Anniversary</h4>
-                                <a href="#">See More</a>
+                            <figcaption class="card-content">
+                                <h4 class="card-header">Anniversary</h4>
+                                <a class="card-link" href="#">See More</a>
                             </figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
-                            <img src="imgs/valentinesDay.jpg" alt="valentinesDay">
-                            <figcaption>
-                                <h4>Valentine's Day</h4>
-                                <a href="#">See More</a>
+                            <img src="imgs/birthday.png" alt="valentinesDay">
+                            <figcaption class="card-content">
+                                <h4 class="card-header">Valentine's Day</h4>
+                                <a class="card-link" href="#">See More</a>
                             </figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
                             <img src="imgs/cristmas.png" alt="cristmas">
-                            <figcaption>
-                                <h4>Cristmas</h4>
-                                <a href="#">See More</a>
+                            <figcaption class="card-content">
+                                <h4 class="card-header">Cristmas</h4>
+                                <a class="card-link" href="#">See More</a>
                             </figcaption>
                         </figure>
                     </li>
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="background-container get-started-section">
             <div>
                 <h2>Ready to get started?</h2>
                 <p>Sign up or contact us</p>
             </div>
-            <a href="#">
-                Find gift now
-            </a>
-            <a href="#">
-                How it works
-            </a>
+            <div>
+                <a href="#">
+                    Find gift now
+                </a>
+                <a href="#">
+                    How it works
+                </a>
+            </div>
         </section>
         <section>
             <h2>Our Best Blogs Ever</h2>
